@@ -526,7 +526,8 @@ daemonize_complete(void)
 }
 
 void
-daemon_become_new_user(bool access_datapath OVS_UNUSED)
+daemon_become_new_user(bool access_datapath OVS_UNUSED,
+                       bool access_hardware_ports OVS_UNUSED)
 {
 }
 
